--- a/MetabolomicsDataProcessing.ipynb
+++ b/MetabolomicsDataProcessing.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_mzML = \"data Thermo Orbitrap ID-X/FileFiltered Std/Scollinus.mzML\"\n",
+    "input_mzML = \"data Thermo Orbitrap ID-X/FileFiltered Std/20210129_DR_UMETAB179_ISP2S_collinus3.mzML\"\n",
     "exp = MSExperiment()\n",
     "MzMLFile().load(input_mzML, exp)"
    ]
@@ -46,11 +46,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "OR:\n",
-    "import sys\n",
-    "MzMLFile().load(sys.argv[1], exp)\n",
-    "\"\"\""
+    "#OR:\n",
+    "#import sys\n",
+    "#MzMLFile().load(sys.argv[1], exp)"
    ]
   },
   {
@@ -390,7 +388,7 @@
    ],
    "source": [
     "mdf_par = mfd.getDefaults()\n",
-    "mdf_par.setValue(\"potential_adducts\",  [b\"H:+:0.6\",b\"Na:+:0.1\",b\"NH4:+:0.1\", b\"K:+:0.1\", b\"H2O:-:0.1\"])\n",
+    "mdf_par.setValue(\"potential_adducts\",  [b\"H:+:0.6\",b\"Na:+:0.2\",b\"NH4:+:0.1\", b\"H2O:-:0.1\"])\n",
     "mdf_par.setValue(\"charge_min\", 1, \"Minimal possible charge\")\n",
     "mdf_par.setValue(\"charge_max\", 1, \"Maximal possible charge\")\n",
     "mdf_par.setValue(\"charge_span_max\", 1)\n",
@@ -531,7 +529,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'/private/var/folders/c_/ysz9v_bd1yb7h3ymmkn6m199jbv7x7/T/20210412_082950_NNFCB-L0682.local_39565_2.ms'\n"
+      "b'/private/var/folders/c_/ysz9v_bd1yb7h3ymmkn6m199jbv7x7/T/20210416_115148_nnfcb-l0682.clients.net.dtu.dk_17687_2.ms'\n"
      ]
     }
    ],
