--- a/MetabolomicsDataProcessing.ipynb
+++ b/MetabolomicsDataProcessing.ipynb
@@ -34,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_mzML = \"data Thermo Orbitrap ID-X/FileFiltered Std/20210129_DR_UMETAB179_ISP2S_collinus3.mzML\"\n",
+    "input_mzML = \"data Thermo Orbitrap ID-X/FileFiltered Std/Epemicins.mzML\"\n",
     "exp = MSExperiment()\n",
     "MzMLFile().load(input_mzML, exp)"
    ]
@@ -290,7 +290,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# Mass traces filtered: 5726\n"
+      "# Mass traces filtered: 0\n"
      ]
     }
    ],
@@ -316,7 +316,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 5187 features\n"
+      "Found 0 features\n"
      ]
     }
    ],
@@ -382,7 +382,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[b'H:+:0.6', b'Na:+:0.1', b'NH4:+:0.1', b'K:+:0.1', b'H2O:-:0.1']\n"
+      "[b'H:+:0.6', b'Na:+:0.2', b'NH4:+:0.1', b'H2O:-:0.1']\n"
      ]
     }
    ],
@@ -471,7 +471,7 @@
     "sirius_algo_par.setValue(\"preprocessing:feature_only\", \"true\")\n",
     "sirius_algo_par.setValue(\"sirius:profile\", \"orbitrap\")\n",
     "#sirius_algo_par.setValue(\"sirius:db\", \"all\")\n",
-    "#sirius_algo_par.setValue(\"sirius:ions_considered\", \"[M+H]+, [M-H2O+H]+, [M+Na]+, [M+NH4]+\")\n",
+    "sirius_algo_par.setValue(\"sirius:ions_considered\", \"[M+H]+, [M-H2O+H]+, [M+Na]+, [M+NH4]+\")\n",
     "sirius_algo_par.setValue(\"sirius:candidates\", 5)\n",
     "sirius_algo_par.setValue(\"sirius:elements_enforced\", \"CHNOP\") \n",
     "sirius_algo_par.setValue(\"project:processors\", 2)\n",
@@ -529,7 +529,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'/private/var/folders/c_/ysz9v_bd1yb7h3ymmkn6m199jbv7x7/T/20210416_115148_nnfcb-l0682.clients.net.dtu.dk_17687_2.ms'\n"
+      "b'/private/var/folders/c_/ysz9v_bd1yb7h3ymmkn6m199jbv7x7/T/20210419_211700_dtu-5cg6284bg0.win.dtu.dk_14113_2.ms'\n"
      ]
     }
    ],
