--- a/MetabolomicsDataProcessing.ipynb
+++ b/MetabolomicsDataProcessing.ipynb
@@ -265,7 +265,7 @@
    "source": [
     "ffm_par = ffm.getDefaults() \n",
     "ffm_par.setValue(\"isotope_filtering_model\", \"none\")\n",
-    "#ffm_par.setValue(\"remove_single_traces\", \"true\")\n",
+    "ffm_par.setValue(\"remove_single_traces\", \"true\")\n",
     "ffm_par.setValue(\"mz_scoring_by_elements\", \"true\")\n",
     "ffm.setParameters(ffm_par)"
    ]
@@ -329,35 +329,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "910c233e",
-   "metadata": {},
-   "source": [
-    "#### Export it to csv -need to leave python"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "f3a46fb5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# /Applications/OpenMS-2.6.0-pre-nightly-2021-04-04/bin/TextExporter -feature:add_metavalues 1 -in /Users/eeko/Desktop/py4e/wf_testing/FeatureFindingMetabo.featureXML -out /Users/eeko/Desktop/py4e/wf_testing/FeatureFindingMetabo.csv"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e85f1c37",
    "metadata": {},
    "source": [
-    "### Run metabolite adduct decharging detection\n",
+    "### Metabolite adduct decharging detection\n",
     "#### With SIRIUS you are only able to use singly charged adducts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "f3f02684",
+   "execution_count": null,
+   "id": "2e23bb93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +397,7 @@
    "id": "c86adb23",
    "metadata": {},
    "source": [
-    "### Save deconvoluted Feature XML file"
+    "#### Save deconvoluted Feature XML file"
    ]
   },
   {
@@ -427,6 +409,28 @@
    "source": [
     "fxml = FeatureXMLFile()\n",
     "fxml.store(\"./wf_testing/devoncoluted.featureXML\", feature_map_DEC)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9c42a79",
+   "metadata": {},
+   "source": [
+    "### Precursor corrector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58d18166",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features= feature_map_FFM\n",
+    "PrecursorCorrection.correctToNearestFeature(features, exp, 0.0, 0.0, True, False, False, False, 3, 0)\n",
+    "\n",
+    "fxml = FeatureXMLFile()\n",
+    "fxml.store(\"./wf_testing/precursorcorrection.featureXML\", feature_map_DEC)"
    ]
   },
   {
@@ -485,7 +489,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "featureinfo = \"./wf_testing/devoncoluted.featureXML\"\n",
+    "featureinfo = \"./wf_testing/precursorcorrection.featureXML\"\n",
     "fm_info = FeatureMapping_FeatureMappingInfo()\n",
     "feature_mapping = FeatureMapping_FeatureToMs2Indices() \n",
     "sirius_algo.preprocessingSirius(featureinfo,\n",
@@ -625,7 +629,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
