--- a/FeatureFinderMetabo data manipulation.ipynb
+++ b/FeatureFinderMetabo data manipulation.ipynb
@@ -17,10 +17,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import sys\n",
-    "#from sklearn.decomposition import PCA\n",
-    "#from sklearn.datasets import load_iris\n",
-    "#import matplotlib.pyplot as plt"
+    "import sys"
    ]
   },
   {
@@ -80,28 +77,6 @@
     "DF1 = init_df(filename1)\n",
     "print(DF1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "01ebb36c",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'PCA' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-d9ce928fb35a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpca\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPCA\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_components\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'PCA' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "pca = PCA(n_components=4)\n"
-   ]
   }
  ],
  "metadata": {
@@ -120,7 +95,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
