--- a/loop/pyOpenMS data processing.ipynb
+++ b/loop/pyOpenMS data processing.ipynb
@@ -10,10 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1b05f8e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Determination of memory status is not supported on this \n",
+      " platform, measuring for memoryleaks will never fail\n"
+     ]
+    }
+   ],
    "source": [
     "from pyopenms import *\n",
     "\n",
@@ -70,12 +79,12 @@
     "    cons_map1 = ConsensusMap()\n",
     "    mfd.compute(feature_map_FFM, feature_map_DEC, cons_map0, cons_map1)\n",
     "    fxml = FeatureXMLFile()\n",
-    "    fxml.store(\"./wf_testing/devoncoluted.featureXML\", feature_map_DEC)\n",
+    "    fxml.store(\"./wf_testing/deconvoluted.featureXML\", feature_map_DEC)\n",
     "    \n",
-    "    features= feature_map_FFM\n",
-    "    PrecursorCorrection.correctToNearestFeature(features, exp, 0.0, 0.0, True, False, False, False, 3, 0)\n",
-    "    fxml = FeatureXMLFile()\n",
-    "    fxml.store(\"./wf_testing/precursorcorrection.featureXML\", feature_map_DEC)\n",
+    "    delta_mzs= []\n",
+    "    mzs = []\n",
+    "    rts= []\n",
+    "    PrecursorCorrection.correctToHighestIntensityMS1Peak(exp, 100.0, True, delta_mzs, mzs, rts)\n",
     "    \n",
     "    sirius_algo = SiriusAdapterAlgorithm()\n",
     "    sirius_algo_par = sirius_algo.getDefaults()\n",
@@ -92,7 +101,7 @@
     "    sirius_algo_par.setValue(\"project:processors\", 2)\n",
     "    sirius_algo.setParameters(sirius_algo_par)\n",
     "    \n",
-    "    featureinfo = \"./wf_testing/precursorcorrection.featureXML\"\n",
+    "    featureinfo = \"./wf_testing/deconvoluted.featureXML\"\n",
     "    fm_info = FeatureMapping_FeatureMappingInfo()\n",
     "    feature_mapping = FeatureMapping_FeatureToMs2Indices() \n",
     "    sirius_algo.preprocessingSirius(featureinfo,\n",
@@ -163,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "id": "0068bedb",
    "metadata": {},
    "outputs": [
@@ -192,6 +201,7 @@
        "      <th>RT</th>\n",
        "      <th>intensity</th>\n",
        "      <th>FWHM</th>\n",
+       "      <th>max_height</th>\n",
        "      <th>num_of_masstraces</th>\n",
        "      <th>masstrace_intensity</th>\n",
        "      <th>masstrace_centroid_rt</th>\n",
@@ -206,6 +216,7 @@
        "      <td>164.07962840572273</td>\n",
        "      <td>1.040512e07</td>\n",
        "      <td>4.345682</td>\n",
+       "      <td>2.760951e+06</td>\n",
        "      <td>2.0</td>\n",
        "      <td>[1.040511761915735e07, 5.185541039769124e06]</td>\n",
        "      <td>[45.363959952000002, 49.049522447999998]</td>\n",
@@ -218,6 +229,7 @@
        "      <td>225.123022735374661</td>\n",
        "      <td>1.885127e07</td>\n",
        "      <td>4.028248</td>\n",
+       "      <td>4.650779e+06</td>\n",
        "      <td>2.0</td>\n",
        "      <td>[1.88512695028333e07, 2.209631519695911e06]</td>\n",
        "      <td>[46.594569856020002, 45.363959952000002]</td>\n",
@@ -230,6 +242,7 @@
        "      <td>236.109758813306456</td>\n",
        "      <td>2.032929e06</td>\n",
        "      <td>5.484940</td>\n",
+       "      <td>3.334849e+05</td>\n",
        "      <td>2.0</td>\n",
        "      <td>[2.032928725485437e06, 2.050767850861186e06]</td>\n",
        "      <td>[49.049522447999998, 50.283078943980001]</td>\n",
@@ -242,6 +255,7 @@
        "      <td>230.104815495306468</td>\n",
        "      <td>5.875936e06</td>\n",
        "      <td>6.925932</td>\n",
+       "      <td>1.712160e+06</td>\n",
        "      <td>4.0</td>\n",
        "      <td>[5.875935802767379e06, 1.423431610895428e06, 7...</td>\n",
        "      <td>[50.283078943980001, 46.594569856020002, 46.59...</td>\n",
@@ -254,6 +268,7 @@
        "      <td>241.088845715144032</td>\n",
        "      <td>1.450073e06</td>\n",
        "      <td>8.214966</td>\n",
+       "      <td>2.192740e+05</td>\n",
        "      <td>2.0</td>\n",
        "      <td>[1.450073112043142e06, 7.304221857743776e05]</td>\n",
        "      <td>[52.732693775999998, 46.594569856020002]</td>\n",
@@ -271,6 +286,7 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>273</th>\n",
@@ -278,6 +294,7 @@
        "      <td>454.431447176522454</td>\n",
        "      <td>1.300941e06</td>\n",
        "      <td>8.163534</td>\n",
+       "      <td>1.888720e+05</td>\n",
        "      <td>2.0</td>\n",
        "      <td>[1.300940665560015e06, 3.834820095867582e05]</td>\n",
        "      <td>[628.324208815980001, 627.146143807980025]</td>\n",
@@ -290,6 +307,7 @@
        "      <td>702.225882911624581</td>\n",
        "      <td>6.671246e05</td>\n",
        "      <td>9.478681</td>\n",
+       "      <td>8.551091e+04</td>\n",
        "      <td>3.0</td>\n",
        "      <td>[6.6712457710756e05, 4.053470682705274e05, 2.0...</td>\n",
        "      <td>[649.307166352019976, 649.307166352019976, 646...</td>\n",
@@ -302,6 +320,7 @@
        "      <td>144.983060615625391</td>\n",
        "      <td>2.72629e08</td>\n",
        "      <td>3.863073</td>\n",
+       "      <td>8.180580e+07</td>\n",
        "      <td>3.0</td>\n",
        "      <td>[2.726290032128139e08, 1.794009343807278e07, 1...</td>\n",
        "      <td>[650.483665183979952, 650.483665183979952, 650...</td>\n",
@@ -314,6 +333,7 @@
        "      <td>261.127783843722739</td>\n",
        "      <td>1.589671e06</td>\n",
        "      <td>2.551173</td>\n",
+       "      <td>5.762502e+05</td>\n",
        "      <td>2.0</td>\n",
        "      <td>[1.589670786637312e06, 2.619513818027474e05]</td>\n",
        "      <td>[650.483665183979952, 648.151223887979995]</td>\n",
@@ -326,6 +346,7 @@
        "      <td>126.057914044316846</td>\n",
        "      <td>8.046835e06</td>\n",
        "      <td>11.896564</td>\n",
+       "      <td>8.258611e+05</td>\n",
        "      <td>2.0</td>\n",
        "      <td>[8.046834815975043e06, 2.532529228293204e06]</td>\n",
        "      <td>[658.616104176000022, 655.134453472020027]</td>\n",
@@ -334,7 +355,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>278 rows × 9 columns</p>\n",
+       "<p>278 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -351,18 +372,31 @@
        "276  650.483665183979952  261.127783843722739  1.589671e06   2.551173   \n",
        "277  658.616104176000022  126.057914044316846  8.046835e06  11.896564   \n",
        "\n",
-       "     num_of_masstraces                                masstrace_intensity  \\\n",
-       "0                  2.0       [1.040511761915735e07, 5.185541039769124e06]   \n",
-       "1                  2.0        [1.88512695028333e07, 2.209631519695911e06]   \n",
-       "2                  2.0       [2.032928725485437e06, 2.050767850861186e06]   \n",
-       "3                  4.0  [5.875935802767379e06, 1.423431610895428e06, 7...   \n",
-       "4                  2.0       [1.450073112043142e06, 7.304221857743776e05]   \n",
-       "..                 ...                                                ...   \n",
-       "273                2.0       [1.300940665560015e06, 3.834820095867582e05]   \n",
-       "274                3.0  [6.6712457710756e05, 4.053470682705274e05, 2.0...   \n",
-       "275                3.0  [2.726290032128139e08, 1.794009343807278e07, 1...   \n",
-       "276                2.0       [1.589670786637312e06, 2.619513818027474e05]   \n",
-       "277                2.0       [8.046834815975043e06, 2.532529228293204e06]   \n",
+       "       max_height  num_of_masstraces  \\\n",
+       "0    2.760951e+06                2.0   \n",
+       "1    4.650779e+06                2.0   \n",
+       "2    3.334849e+05                2.0   \n",
+       "3    1.712160e+06                4.0   \n",
+       "4    2.192740e+05                2.0   \n",
+       "..            ...                ...   \n",
+       "273  1.888720e+05                2.0   \n",
+       "274  8.551091e+04                3.0   \n",
+       "275  8.180580e+07                3.0   \n",
+       "276  5.762502e+05                2.0   \n",
+       "277  8.258611e+05                2.0   \n",
+       "\n",
+       "                                   masstrace_intensity  \\\n",
+       "0         [1.040511761915735e07, 5.185541039769124e06]   \n",
+       "1          [1.88512695028333e07, 2.209631519695911e06]   \n",
+       "2         [2.032928725485437e06, 2.050767850861186e06]   \n",
+       "3    [5.875935802767379e06, 1.423431610895428e06, 7...   \n",
+       "4         [1.450073112043142e06, 7.304221857743776e05]   \n",
+       "..                                                 ...   \n",
+       "273       [1.300940665560015e06, 3.834820095867582e05]   \n",
+       "274  [6.6712457710756e05, 4.053470682705274e05, 2.0...   \n",
+       "275  [2.726290032128139e08, 1.794009343807278e07, 1...   \n",
+       "276       [1.589670786637312e06, 2.619513818027474e05]   \n",
+       "277       [8.046834815975043e06, 2.532529228293204e06]   \n",
        "\n",
        "                                 masstrace_centroid_rt  \\\n",
        "0             [45.363959952000002, 49.049522447999998]   \n",
@@ -403,10 +437,10 @@
        "276                                [1.045622785302101]  \n",
        "277                                 [0.98955147319802]  \n",
        "\n",
-       "[278 rows x 9 columns]"
+       "[278 rows x 10 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +451,7 @@
     "\n",
     "import pyteomics\n",
     "from pyteomics.openms import featurexml\n",
-    "with featurexml.read(\"./wf_testing/devoncoluted.featureXML\") as f:\n",
+    "with featurexml.read(\"./wf_testing/deconvoluted.featureXML\") as f:\n",
     "    features_list = [FXML for FXML in f]\n",
     "    \n",
     "df = pd.DataFrame() \n",
@@ -467,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "id": "fcdfac85",
    "metadata": {},
    "outputs": [
@@ -1437,7 +1471,7 @@
        "29      controllerType=0 controllerNumber=1 scan=2847  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1458,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "id": "e23e00b2",
    "metadata": {},
    "outputs": [
@@ -1782,7 +1816,7 @@
        "9         [M + Na]+             PubChem:(25000395)                   2  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
