sirius checkup issue

--- a/loop/pyOpenMS data processing.ipynb
+++ b/loop/pyOpenMS data processing.ipynb
@@ -10,19 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "1b05f8e8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Determination of memory status is not supported on this \n",
-      " platform, measuring for memoryleaks will never fail\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pyopenms import *\n",
     "\n",
@@ -97,7 +88,7 @@
     "    sirius_algo_par.setValue(\"sirius:db\", \"all\")\n",
     "    sirius_algo_par.setValue(\"sirius:ions_considered\", \"[M+H]+, [M-H2O+H]+, [M+Na]+, [M+NH4]+\")\n",
     "    sirius_algo_par.setValue(\"sirius:candidates\", 5)\n",
-    "    sirius_algo_par.setValue(\"sirius:elements_enforced\", \"CHN[30]OP\") \n",
+    "    sirius_algo_par.setValue(\"sirius:elements_enforced\", \"CHNOP\") \n",
     "    sirius_algo_par.setValue(\"project:processors\", 2)\n",
     "    sirius_algo.setParameters(sirius_algo_par)\n",
     "    \n",
@@ -127,7 +118,7 @@
     "                 no_mt_info, \n",
     "                 compound_info)\n",
     "    out_csifingerid = \"./wf_testing/csifingerID.mzTab\" \n",
-    "    executable= \"/Users/eeko/Desktop/software/THIRDPARTY/MacOS/64bit/Sirius/sirius\"\n",
+    "    executable= \"/Users/eeko/Desktop/software/Contents/MacOS/sirius\"\n",
     "    subdirs = sirius_algo.callSiriusQProcess(String(sirius_tmp.getTmpMsFile()),\n",
     "                                             String(sirius_tmp.getTmpOutDir()),\n",
     "                                             String(executable),\n",
@@ -137,7 +128,7 @@
     "    sirius_result = MzTab()\n",
     "    siriusfile = MzTabFile()\n",
     "    SiriusMzTabWriter.read(subdirs,\n",
-    "                            input_mzML,\n",
+    "                            filename,\n",
     "                            candidates,\n",
     "                            sirius_result)\n",
     "    siriusfile.store(\"./wf_testing/out_sirius_test.mzTab\", sirius_result)\n",
@@ -145,19 +136,66 @@
     "    csi_result=MzTab()\n",
     "    csi_file=MzTabFile()\n",
     "    CsiFingerIdMzTabWriter.read(subdirs,\n",
-    "                        input_mzML,\n",
+    "                        filename,\n",
     "                        top_hits,\n",
     "                        csi_result)\n",
     "    csi_file.store(\"./wf_testing/csifingerID.mzTab\", csi_result)\n",
-    "    return \"./wf_testing/out_sirius_test.mzTab\""
+    "    return \"FINITO\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "id": "3ba9b35b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "    \u001b[0;31m[... skipping hidden 1 frame]\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-16-ec5769757bae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mfilename\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"./Agnes_POS_MDNA_WGS_103_Filtered.mzML\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mpyopenms_WF\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-15-b5b30ee50936>\u001b[0m in \u001b[0;36mpyopenms_WF\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m    104\u001b[0m     \u001b[0mexecutable\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;34m\"/Users/eeko/Desktop/software/Contents/MacOS/sirius\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 105\u001b[0;31m     subdirs = sirius_algo.callSiriusQProcess(String(sirius_tmp.getTmpMsFile()),\n\u001b[0m\u001b[1;32m    106\u001b[0m                                              \u001b[0mString\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msirius_tmp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetTmpOutDir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpyopenms/pyopenms_3.pyx\u001b[0m in \u001b[0;36mpyopenms.pyopenms_3.SiriusAdapterAlgorithm.callSiriusQProcess\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: the value '' was used but is not valid; FATAL: SIRIUS could not be executed!",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "filename = \"./Agnes_POS_MDNA_WGS_103_Filtered.mzML\"\n",
+    "pyopenms_WF(filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "3755e125",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "    \u001b[0;31m[... skipping hidden 1 frame]\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-4-880e66ca678a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\".mzML\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m         \u001b[0mpyopenms_WF\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdirectory\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-3-7c55069d64bb>\u001b[0m in \u001b[0;36mpyopenms_WF\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m    104\u001b[0m     \u001b[0mexecutable\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;34m\"/Users/eeko/Desktop/software/Contents/MacOS/sirius\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 105\u001b[0;31m     subdirs = sirius_algo.callSiriusQProcess(String(sirius_tmp.getTmpMsFile()),\n\u001b[0m\u001b[1;32m    106\u001b[0m                                              \u001b[0mString\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msirius_tmp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetTmpOutDir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpyopenms/pyopenms_3.pyx\u001b[0m in \u001b[0;36mpyopenms.pyopenms_3.SiriusAdapterAlgorithm.callSiriusQProcess\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: the value '' was used but is not valid; FATAL: SIRIUS could not be executed!",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "directory= \"./\"\n",
