prague workshop changes

--- a/pyOpenMSfunctions.ipynb
+++ b/pyOpenMSfunctions.ipynb
@@ -222,7 +222,9 @@
    "id": "c0cafeba",
    "metadata": {},
    "source": [
-    "### Precursor corrector"
+    "### Precursor corrector\n",
+    "\n",
+    "#### Correct the parent ion that is chosen for MS/MS fragmentation to the nearest feature"
    ]
   },
   {
@@ -233,11 +235,11 @@
    "outputs": [],
    "source": [
     "def PC(filename):\n",
-    "    delta_mzs= []\n",
-    "    mzs = []\n",
-    "    rts= []\n",
-    "    PrecursorCorrection.correctToHighestIntensityMS1Peak(exp, 100.0, True, delta_mzs, mzs, rts)\n",
-    "    signal.alarm(30)"
+    "    out_mzml= \"./mzML_files/wf_testing/PrecursorCorrected.mzML\"\n",
+    "    features= FeatureMap()\n",
+    "    FeatureXMLFile().load(\"./mzML_files/wf_testing/deconvoluted.featureXML\", features)\n",
+    "    PrecursorCorrection.correctToNearestFeature(features, exp, 0.0, 100.0, True, False, False, False, 3, 0)\n",
+    "    MzMLFile().store(out_mzml, exp)"
    ]
   },
   {
@@ -245,7 +247,9 @@
    "id": "641b3c58",
    "metadata": {},
    "source": [
-    "## SIRIUS Adapter Algorithm and CSI:FingerID"
+    "## SIRIUS Adapter Algorithm and CSI:FingerID\n",
+    "\n",
+    "#### Formula prediction from scores calculated from 1) MS2 fragmentation scores (ppm error + intensity) and 2) MS1 isotopic pattern scores"
    ]
   },
   {
@@ -323,14 +327,6 @@
     "    csi_file.store(\"./pyOpenMS_results/csifingerID.mzTab\", csi_result)\n",
     "    print(String(sirius_tmp.getTmpMsFile()))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9d852459",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
