--- a/Raw_data_processing.ipynb
+++ b/Raw_data_processing.ipynb
@@ -10,11 +10,7 @@
     "Download proteowizard (Windows only)\n",
     "Run:\n",
     "\n",
-    "msconvert *.raw --zlib --filter \"peakPicking true [1 ,2]\" --ignoreUnknownInstrumentError\n",
-    "\n",
-    "Then, from CLI of openms nightly, filter out the negative intensities:\n",
-    "\n",
-    "./FileFilter -in \"path\" -out \"path\" -int \"0:\""
+    "msconvert *.raw --filter \"peakPicking true 1- \" --filter \"msLevel 1-\" --ignoreUnknownInstrumentError"
    ]
   },
   {
