worked_like_a_charm

--- a/Raw_data_processing.ipynb
+++ b/Raw_data_processing.ipynb
@@ -10,7 +10,11 @@
     "Download proteowizard (Windows only)\n",
     "Run:\n",
     "\n",
-    "msconvert *.raw --filter \"peakPicking true 1- \" --filter \"msLevel 1-\" --ignoreUnknownInstrumentError"
+    "msconvert *.raw --filter \"peakPicking true 1- \" --ignoreUnknownInstrumentError\n",
+    "\n",
+    "Then, from CLI of openms nightly, filter out the negative intensities:\n",
+    "\n",
+    "./FileFilter -in \"path\" -out \"path\" -int \"0:\""
    ]
   },
   {
