--- a/Whole WF_w_dataframes.ipynb
+++ b/Whole WF_w_dataframes.ipynb
@@ -13,7 +13,11 @@
     "\n",
     "msconvert *.raw --filter \"peakPicking true 1- \" --filter \"msLevel 1-\" --ignoreUnknownInstrumentError\n",
     "\n",
-    "Or PeakPicking MS 1- through the GUI"
+    "Or PeakPicking MS 1- through the GUI\n",
+    "\n",
+    "If you are still getting negative intensities, then, from CLI of openms nightly, filter out the negative intensities:\n",
+    "\n",
+    "./FileFilter -in \"path\" -out \"path\" -int \"0:\""
    ]
   },
   {
@@ -215,9 +219,18 @@
     "### SIRIUS Adapter\n",
     "The SIRIUS function is optional and includes the SIRIUS Adapter Algorithm from the Boecher lab. \n",
     "\n",
-    "This generates formula prediction from scores calculated from 1) MS2 fragmentation scores (ppm error + intensity) and 2) MS1 isotopic pattern scores.\n",
     "\n",
-    "This can help in data dereplication and analysis for direct library search of formulas. "
+    "The algorithm generates formula prediction from scores calculated from 1) MS2 fragmentation scores (ppm error + intensity) and 2) MS1 isotopic pattern scores.\n",
+    "\n",
+    "\n",
+    "It can only compute feautures that are singly charged. There is also a timeout for compounds (compound timeout so that it doesn't compute for longer than 100 seconds per feature, which normally happens with larger molecules).\n",
+    "\n",
+    "\n",
+    "-sirius:compound_timeout <number>                    \n",
+    "Maximal computation time in seconds for a single compound. 0 for an infinite amount of time. (default: '100' min: '0')\n",
+    "\n",
+    "    \n",
+    "This algorith can help in data dereplication and analysis for direct library search. "
    ]
   },
   {
@@ -742,7 +755,7 @@
     }
    ],
    "source": [
-    "filename= \"./rawdata/GNPS/CollinusKirromycin.mzML\"\n",
+    "filename= \"./rawdata/CLImzml/CollinusKirromycin.mzML\"\n",
     "preprocess(filename)"
    ]
   },
