Whole_WF_w_dataframes and functions (all explanations)

--- a/Whole WF_w_dataframes.ipynb
+++ b/Whole WF_w_dataframes.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "### 1) PrecursorCorrection (To the \"highest intensity MS1 peak\")\n",
     "\n",
-    "So the highestintensity is used directly right after the file introduction, in order to correct wrong MS1 precursor annotation - this means it will correct in the precursor window (e.g. 0.01 Da) and then use the highest intensity peak as the precursor. This is to correct for any instrument error. Since we assume that in the give mass window, the precursor with the hightest intensity was actually fragmented instead of any other (top-n method).\n",
+    "The highestintensity is used directly right after the file introduction, in order to correct any wrong MS1 precursor annotation - this means it will correct in the precursor window (e.g. 0.01 Da) and then use the highest intensity peak as the precursor. This is to correct for any instrument error. Since we assume that in the given mass window, the precursor with the hightest intensity was actually fragmented instead of any other (top-n method). This method is by default used in the Thermo Orbitrap instrument we have.\n",
     "\n"
    ]
   },
@@ -137,7 +137,9 @@
     "\n",
     "The output of the algorithm is a set of chromatographic peaks for each mass trace, i.e. a vector of split mass traces (see ElutionPeakDetection parameters).\n",
     "\n",
-    "In general, a user would want to call the \"detectPeaks\" functions, potentially followed by the \"filterByPeakWidth\" function."
+    "In general, a user would want to call the \"detectPeaks\" functions, potentially followed by the \"filterByPeakWidth\" function.\n",
+    "\n",
+    "This method in other words is \"deconvolution\"."
    ]
   },
   {
@@ -244,7 +246,14 @@
    "source": [
     "### 6) PrecursorCorrection (To the \"nearest feature”)\n",
     "\n",
-    "This algorithm is used after feature detection, adduct grouping and even identification via accurate mass search. It basically allows the precursor correction on MS2 level. Which means that if there are MS2 spectra in my feature space which have been measured in isotope traces, it “corrects” the MS2 spectrum annotation to the monoisotopic trace. That is why you have a high mass deviation 100 pm, but 0.0 rt tolerance. So it basically corrects the MS2 to the feature centroid that can be found/mapped by SIRIUS::preprocessing later on."
+    "This algorithm is used after feature detection, adduct grouping and even identification via accurate mass search. It basically allows the precursor correction on MS2 level. \n",
+    "\n",
+    "Which means that if there are MS2 spectra in my feature space which have been measured in isotope traces, it “corrects” the MS2 spectrum annotation to the monoisotopic trace. That is why you have a high mass deviation 100 pm, but 0.0 rt tolerance. So it basically corrects the MS2 to the feature centroid that can be found/mapped by SIRIUS::preprocessing later on.\n",
+    "\n",
+    "Wrong assignment of the mono-isotopic mass for precursors are assumed:\n",
+    "\n",
+    "1. if precursor_mz matches the mz of a non-monoisotopic feature mass trace and \n",
+    "2. in the case that believe_charge is true: if feature_charge matches the precursor_charge In the case of wrong mono-isotopic assignment several options for correction are available: keep_original will create a copy of the precursor and tandem spectrum for the new mono-isotopic mass trace and retain the original one. all_matching_features does this not for only the closest feature but all features in a question."
    ]
   },
   {
@@ -917,6 +926,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "20d8187c-ac94-4963-944e-44228aad3eb6",
+   "metadata": {},
+   "source": [
+    "### Explanation of columns\n",
+    "#### mz= mass-to-charge ratio (m/z)\n",
+    "#### RT= retention time (sec)\n",
+    "#### intensity = intensity of the feature (AU-arbitrary units)\n",
+    "#### FWHM= Full Width of the peak at Half its Maximum height\n",
+    "#### num_of_masstraces\t= number of mass traces detected (single mass traces are excluded). This is relevant to the isotopic pattern\n",
+    "#### isotope_distances = distance in mz between the isotopes (jumps of app. 1 is important to confirm that this is a real feature)\n",
+    "#### "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "f51fcc2c-e7ea-4ed5-af6d-f97c961bfcb3",
@@ -1342,12 +1366,6 @@
    "source": [
     "SIRIUS(filename)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ce936df9",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
