--- a/Whole WF_w_dataframes.ipynb
+++ b/Whole WF_w_dataframes.ipynb
@@ -17,7 +17,17 @@
     "\n",
     "If you are still getting negative intensities, then, from CLI of openms nightly, filter out the negative intensities:\n",
     "\n",
-    "./FileFilter -in \"path\" -out \"path\" -int \"0:\""
+    "./FileFilter -in \"path\" -out \"path\" -int \"0:\"\n",
+    "\n",
+    "\n",
+    "For Mac or Linux users (also windows):\n",
+    "\n",
+    "Download ThermoRawFileParser https://github.com/compomics/ThermoRawFileParser\n",
+    "\n",
+    "Run the commands:\n",
+    "\n",
+    "1) mono ThermoRawFileParser.exe -d=/Users/eeko/Desktop/py4e/rawdata/mgf/ -f=0 -g \n",
+    "2) mono ThermoRawFileParser.exe -d=/Users/eeko/Desktop/py4e/rawdata/mzML/ "
    ]
   },
   {
@@ -66,6 +76,12 @@
     "### 1) PrecursorCorrection (To the \"highest intensity MS1 peak\")\n",
     "\n",
     "The highestintensity is used directly right after the file introduction, in order to correct any wrong MS1 precursor annotation - this means it will correct in the precursor window (e.g. 0.01 Da) and then use the highest intensity peak as the precursor. This is to correct for any instrument error. Since we assume that in the given mass window, the precursor with the hightest intensity was actually fragmented instead of any other (top-n method). This method is by default used in the Thermo Orbitrap instrument we have.\n",
+    "\n",
+    "openMS definition:\n",
+    "\n",
+    "\"Selection of the peak with the highest intensity as corrected precursor mass in a given mass range (e.g. precursor mass +/- 0.2 Da)\n",
+    "\n",
+    "For each MS2 spectrum the corresponding MS1 spectrum is determined by using the rt information of the precursor. In the MS1, the peak with the highest intensity in a given mass range to the uncorrected precursor m/z is selected and used as corrected precursor m/z.\"\n",
     "\n"
    ]
   },
