--- a/OpenMS_workflow.ipynb
+++ b/OpenMS_workflow.ipynb
@@ -13,18 +13,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2021-10-22 16:25:52 INFO Started analyzing folder data/raw/\n",
+      "2021-10-22 16:25:52 INFO The folder contains 4 RAW files\n",
+      "2021-10-22 16:25:52 INFO Started parsing data/raw/20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_14_rep1.raw\n",
+      "2021-10-22 16:25:54 INFO Processing 5212 MS scans\n",
+      "10% 20% 30% 40% 50% 60% 70% 80% 90% 100% \n",
+      "\n",
+      "2021-10-22 16:26:06 INFO Finished parsing data/raw/20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_14_rep1.raw\n",
+      "2021-10-22 16:26:06 INFO Started parsing data/raw/20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_14_rep3.raw\n",
+      "2021-10-22 16:26:07 INFO Processing 5079 MS scans\n",
+      "10% 20% 30% 40% 50% 60% 70% 80% 90% 100% \n",
+      "\n",
+      "2021-10-22 16:26:17 INFO Finished parsing data/raw/20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_14_rep3.raw\n",
+      "2021-10-22 16:26:17 INFO Started parsing data/raw/20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_14_rep2.raw\n",
+      "2021-10-22 16:26:18 INFO Processing 5089 MS scans\n",
+      "10% 20% 30% 40% 50% 60% 70% 80% 90% 100% \n",
+      "\n",
+      "2021-10-22 16:26:28 INFO Finished parsing data/raw/20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_14_rep2.raw\n",
+      "2021-10-22 16:26:28 INFO Started parsing data/raw/20210827_UMETAB219_POS_ISP2_Plate-2_MDNA_WGS_14_rep1.raw\n",
+      "2021-10-22 16:26:28 INFO Processing 5236 MS scans\n",
+      "10% 20% 30% 40% 50% 60% 70% 80% 90% 100% \n",
+      "\n",
+      "2021-10-22 16:26:38 INFO Finished parsing data/raw/20210827_UMETAB219_POS_ISP2_Plate-2_MDNA_WGS_14_rep1.raw\n"
+     ]
+    }
+   ],
    "source": [
     "!mono resources/ThermoRawFileParser/ThermoRawFileParser.exe -d=\"data/raw/\" -o=\"results/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sample_name</th>\n",
+       "      <th>comment</th>\n",
+       "      <th>MAPnumber</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_1...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_1...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_1...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>20210827_UMETAB219_POS_ISP2_Plate-2_MDNA_WGS_1...</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         sample_name comment MAPnumber\n",
+       "0  20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_1...                  \n",
+       "1  20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_1...                  \n",
+       "2  20210827_UMETAB219_POS_DNPM_Plate-2_MDNA_WGS_1...                  \n",
+       "3  20210827_UMETAB219_POS_ISP2_Plate-2_MDNA_WGS_1...                  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "!(cd data/raw && ls *.raw > filelist.txt)\n",
     "import pandas as pd\n",
@@ -47,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "id": "969483bc",
    "metadata": {},
    "outputs": [],
@@ -86,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
